--- a/Draw/Controller/Common/CommonDiceDialog.xib
+++ b/Draw/Controller/Common/CommonDiceDialog.xib
@@ -58,7 +58,7 @@
 							<object class="IBUIImageView" id="892798174">
 								<reference key="NSNextResponder" ref="613159573"/>
 								<int key="NSvFlags">319</int>
-								<string key="NSFrameSize">{304, 206}</string>
+								<string key="NSFrameSize">{250, 180}</string>
 								<reference key="NSSuperview" ref="613159573"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="140913823"/>
@@ -72,7 +72,7 @@
 							<object class="IBUILabel" id="140913823">
 								<reference key="NSNextResponder" ref="613159573"/>
 								<int key="NSvFlags">319</int>
-								<string key="NSFrame">{{0, 9}, {304, 30}}</string>
+								<string key="NSFrame">{{0, 8}, {250, 26}}</string>
 								<reference key="NSSuperview" ref="613159573"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="417008969"/>
@@ -108,7 +108,7 @@
 							<object class="IBUIButton" id="892863268">
 								<reference key="NSNextResponder" ref="613159573"/>
 								<int key="NSvFlags">319</int>
-								<string key="NSFrame">{{20, 154}, {99, 37}}</string>
+								<string key="NSFrame">{{16, 134}, {81, 32}}</string>
 								<reference key="NSSuperview" ref="613159573"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="523235243"/>
@@ -134,7 +134,7 @@
 							<object class="IBUIButton" id="523235243">
 								<reference key="NSNextResponder" ref="613159573"/>
 								<int key="NSvFlags">319</int>
-								<string key="NSFrame">{{185, 154}, {99, 37}}</string>
+								<string key="NSFrame">{{152, 134}, {81, 32}}</string>
 								<reference key="NSSuperview" ref="613159573"/>
 								<reference key="NSWindow"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -152,7 +152,7 @@
 							<object class="IBUILabel" id="417008969">
 								<reference key="NSNextResponder" ref="613159573"/>
 								<int key="NSvFlags">319</int>
-								<string key="NSFrame">{{53, 60}, {198, 76}}</string>
+								<string key="NSFrame">{{43, 52}, {162, 66}}</string>
 								<reference key="NSSuperview" ref="613159573"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="892863268"/>
@@ -179,7 +179,7 @@
 								</object>
 							</object>
 						</array>
-						<string key="NSFrame">{{8, 101.5}, {304, 257}}</string>
+						<string key="NSFrame">{{35, 114.5}, {250, 180}}</string>
 						<reference key="NSSuperview" ref="123595793"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="892798174"/>
@@ -187,6 +187,7 @@
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MCAwAA</bytes>
 						</object>
+						<float key="IBUIAlpha">0.80000001192092896</float>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
@@ -300,10 +301,10 @@
 						<reference key="object" ref="613159573"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="892798174"/>
-							<reference ref="892863268"/>
 							<reference ref="523235243"/>
 							<reference ref="140913823"/>
 							<reference ref="417008969"/>
+							<reference ref="892863268"/>
 						</array>
 						<reference key="parent" ref="123595793"/>
 					</object>
