--- a/Draw/Controller/Common/CommonDiceDialog~ipad.xib
+++ b/Draw/Controller/Common/CommonDiceDialog~ipad.xib
@@ -57,7 +57,7 @@
 							<object class="IBUIImageView" id="892798174">
 								<reference key="NSNextResponder" ref="613159573"/>
 								<int key="NSvFlags">274</int>
-								<string key="NSFrameSize">{603, 461}</string>
+								<string key="NSFrameSize">{500, 360}</string>
 								<reference key="NSSuperview" ref="613159573"/>
 								<reference key="NSNextKeyView" ref="140913823"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -70,7 +70,7 @@
 							<object class="IBUILabel" id="140913823">
 								<reference key="NSNextResponder" ref="613159573"/>
 								<int key="NSvFlags">319</int>
-								<string key="NSFrame">{{0, 57}, {603, 53}}</string>
+								<string key="NSFrame">{{0, 44}, {500, 42}}</string>
 								<reference key="NSSuperview" ref="613159573"/>
 								<reference key="NSNextKeyView" ref="417008969"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -105,7 +105,7 @@
 							<object class="IBUIButton" id="892863268">
 								<reference key="NSNextResponder" ref="613159573"/>
 								<int key="NSvFlags">319</int>
-								<string key="NSFrame">{{47, 358}, {196, 66}}</string>
+								<string key="NSFrame">{{39, 280}, {162, 51}}</string>
 								<reference key="NSSuperview" ref="613159573"/>
 								<reference key="NSNextKeyView" ref="523235243"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -117,11 +117,11 @@
 								<reference key="IBUIHighlightedTitleColor" ref="74671699"/>
 								<reference key="IBUINormalTitleColor" ref="256703508"/>
 								<reference key="IBUINormalTitleShadowColor" ref="74671699"/>
-								<object class="IBUIFontDescription" key="IBUIFontDescription" id="342227001">
+								<object class="IBUIFontDescription" key="IBUIFontDescription" id="173046360">
 									<int key="type">2</int>
 									<double key="pointSize">30</double>
 								</object>
-								<object class="NSFont" key="IBUIFont" id="303590001">
+								<object class="NSFont" key="IBUIFont" id="258872028">
 									<string key="NSName">Helvetica-Bold</string>
 									<double key="NSSize">30</double>
 									<int key="NSfFlags">16</int>
@@ -130,7 +130,7 @@
 							<object class="IBUIButton" id="523235243">
 								<reference key="NSNextResponder" ref="613159573"/>
 								<int key="NSvFlags">319</int>
-								<string key="NSFrame">{{367, 358}, {196, 66}}</string>
+								<string key="NSFrame">{{304, 280}, {162, 51}}</string>
 								<reference key="NSSuperview" ref="613159573"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -141,13 +141,13 @@
 								<reference key="IBUIHighlightedTitleColor" ref="74671699"/>
 								<reference key="IBUINormalTitleColor" ref="256703508"/>
 								<reference key="IBUINormalTitleShadowColor" ref="74671699"/>
-								<reference key="IBUIFontDescription" ref="342227001"/>
-								<reference key="IBUIFont" ref="303590001"/>
+								<reference key="IBUIFontDescription" ref="173046360"/>
+								<reference key="IBUIFont" ref="258872028"/>
 							</object>
 							<object class="IBUILabel" id="417008969">
 								<reference key="NSNextResponder" ref="613159573"/>
-								<int key="NSvFlags">303</int>
-								<string key="NSFrame">{{105, 150}, {392, 136}}</string>
+								<int key="NSvFlags">319</int>
+								<string key="NSFrame">{{87, 117}, {325, 106}}</string>
 								<reference key="NSSuperview" ref="613159573"/>
 								<reference key="NSNextKeyView" ref="892863268"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -173,13 +173,14 @@
 								</object>
 							</object>
 						</array>
-						<string key="NSFrame">{{82, 271}, {603, 461}}</string>
+						<string key="NSFrame">{{133.5, 321.5}, {500, 360}}</string>
 						<reference key="NSSuperview" ref="123595793"/>
 						<reference key="NSNextKeyView" ref="892798174"/>
 						<object class="NSColor" key="IBUIBackgroundColor" id="553214630">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MCAwAA</bytes>
 						</object>
+						<float key="IBUIAlpha">0.80000001192092896</float>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
