--- a/Draw/Controller/Common/CommonDiceDialog.xib
+++ b/Draw/Controller/Common/CommonDiceDialog.xib
@@ -58,10 +58,10 @@
 							<object class="IBUIImageView" id="892798174">
 								<reference key="NSNextResponder" ref="613159573"/>
 								<int key="NSvFlags">319</int>
-								<string key="NSFrameSize">{250, 180}</string>
+								<string key="NSFrameSize">{250, 152}</string>
 								<reference key="NSSuperview" ref="613159573"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="140913823"/>
+								<reference key="NSNextKeyView" ref="417008969"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<object class="NSCustomResource" key="IBUIImage">
@@ -72,10 +72,10 @@
 							<object class="IBUILabel" id="140913823">
 								<reference key="NSNextResponder" ref="613159573"/>
 								<int key="NSvFlags">319</int>
-								<string key="NSFrame">{{0, 8}, {250, 26}}</string>
+								<string key="NSFrame">{{-1, 7}, {250, 29}}</string>
 								<reference key="NSSuperview" ref="613159573"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="417008969"/>
+								<reference key="NSNextKeyView" ref="892798174"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
 								<int key="IBUIContentMode">7</int>
@@ -108,7 +108,7 @@
 							<object class="IBUIButton" id="892863268">
 								<reference key="NSNextResponder" ref="613159573"/>
 								<int key="NSvFlags">319</int>
-								<string key="NSFrame">{{16, 134}, {81, 32}}</string>
+								<string key="NSFrame">{{20, 107.5}, {81, 36}}</string>
 								<reference key="NSSuperview" ref="613159573"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="523235243"/>
@@ -134,9 +134,10 @@
 							<object class="IBUIButton" id="523235243">
 								<reference key="NSNextResponder" ref="613159573"/>
 								<int key="NSvFlags">319</int>
-								<string key="NSFrame">{{152, 134}, {81, 32}}</string>
+								<string key="NSFrame">{{149, 108}, {81, 36}}</string>
 								<reference key="NSSuperview" ref="613159573"/>
 								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
@@ -152,7 +153,7 @@
 							<object class="IBUILabel" id="417008969">
 								<reference key="NSNextResponder" ref="613159573"/>
 								<int key="NSvFlags">319</int>
-								<string key="NSFrame">{{43, 52}, {162, 66}}</string>
+								<string key="NSFrame">{{20, 38}, {210, 62}}</string>
 								<reference key="NSSuperview" ref="613159573"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="892863268"/>
@@ -164,10 +165,9 @@
 								<string key="IBUIText">确定要退出游戏吗？确定要退出游戏吗？</string>
 								<reference key="IBUITextColor" ref="256703508"/>
 								<nil key="IBUIHighlightedColor"/>
-								<int key="IBUIBaselineAdjustment">0</int>
 								<float key="IBUIMinimumFontSize">10</float>
 								<int key="IBUINumberOfLines">6</int>
-								<int key="IBUILineBreakMode">0</int>
+								<int key="IBUILineBreakMode">1</int>
 								<object class="IBUIFontDescription" key="IBUIFontDescription">
 									<int key="type">1</int>
 									<double key="pointSize">14</double>
@@ -177,12 +177,13 @@
 									<double key="NSSize">14</double>
 									<int key="NSfFlags">16</int>
 								</object>
+								<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 							</object>
 						</array>
-						<string key="NSFrame">{{35, 114.5}, {250, 180}}</string>
+						<string key="NSFrame">{{35, 128.5}, {250, 152}}</string>
 						<reference key="NSSuperview" ref="123595793"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="892798174"/>
+						<reference key="NSNextKeyView" ref="140913823"/>
 						<object class="NSColor" key="IBUIBackgroundColor" id="553214630">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MCAwAA</bytes>
@@ -301,10 +302,10 @@
 						<reference key="object" ref="613159573"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="892798174"/>
-							<reference ref="523235243"/>
 							<reference ref="140913823"/>
 							<reference ref="417008969"/>
 							<reference ref="892863268"/>
+							<reference ref="523235243"/>
 						</array>
 						<reference key="parent" ref="123595793"/>
 					</object>
@@ -424,7 +425,7 @@
 				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">FontButton</string>
-					<string key="superclassName">UIButton</string>
+					<string key="superclassName">UIGlossyButton</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/FontButton.h</string>
@@ -444,6 +445,14 @@
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/HKGirlFontLabel.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">UIGlossyButton</string>
+					<string key="superclassName">UIButton</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/UIGlossyButton.h</string>
 					</object>
 				</object>
 			</array>
